table collapsing working + fixes to progress bar

--- a/src/index.css
+++ b/src/index.css
@@ -640,6 +640,7 @@ td:nth-child(2) {
   display: block;
   width: 100%;
   height: 5px;
+  margin: auto;
   margin-top: 5px;
   background-color: #ffecd2;
   border-radius: 2px;
@@ -825,6 +826,10 @@ td:nth-child(2) {
 
   #menu-legend {
     right: 260px;
+  }
+
+  .progress-bar-container {
+    width: 80%;
   }
 }
 
